Renamed overview cmoponent to homepage in order to make it clearer

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -7,8 +7,8 @@
   <app-deposit-view class="overview-card-container"></app-deposit-view>
   <app-send-to-view class="overview-card-container"></app-send-to-view>
   <app-proposals-view class="overview-card-container"></app-proposals-view>
-  <cfund-payment-req-list
+  <app-cfund-payment-req-list
     class="overview-card-container"
-  ></cfund-payment-req-list>
+  ></app-cfund-payment-req-list>
   <app-generic-rpc-form class="overview-card-container"></app-generic-rpc-form>
 </div>
