--- a/src/app/community-fund/proposal-list/proposal-list.component.html
+++ b/src/app/community-fund/proposal-list/proposal-list.component.html
@@ -3,9 +3,17 @@
     Community Fund Proposals
   </mz-card-title>
   <mz-card-content>
-    <div *ngIf="!proposalList || !proposalVotes">Loading...</div>
-    <div *ngIf="proposalList && proposalVotes" class="proposal-container">
-      <div *ngFor="let proposal of proposalList" class="proposal-info">
+    <div *ngIf="!comFundService.proposalList || !comFundService.proposalVotes">
+      Loading...
+    </div>
+    <div
+      *ngIf="comFundService.proposalList && comFundService.proposalVotes"
+      class="proposal-container"
+    >
+      <div
+        *ngFor="let proposal of comFundService.proposalList"
+        class="proposal-info"
+      >
         <div>
           <div class="description-text">
             <h1>{{ proposal.description }}</h1>
@@ -49,20 +57,24 @@
                 <button
                   [ngClass]="{
                     'yes-btn': true,
-                    selected: votingYes(proposal.hash)
+                    selected: comFundService.proposalVotingYes(proposal.hash)
                   }"
                   [disabled]="buttonDebounce"
-                  (click)="proposalVote(proposal.hash, 'yes')"
+                  (click)="
+                    comFundService.updateProposalVote(proposal.hash, 'yes')
+                  "
                 >
                   Yes
                 </button>
                 <button
                   [ngClass]="{
                     'no-btn': true,
-                    selected: votingNo(proposal.hash)
+                    selected: comFundService.proposalVotingNo(proposal.hash)
                   }"
                   [disabled]="buttonDebounce"
-                  (click)="proposalVote(proposal.hash, 'no')"
+                  (click)="
+                    comFundService.updateProposalVote(proposal.hash, 'no')
+                  "
                 >
                   No
                 </button>
