--- a/src/app/overview/deposit-view/deposit-view.component.html
+++ b/src/app/overview/deposit-view/deposit-view.component.html
@@ -1,12 +1,19 @@
-<mz-card
-class="overview-card deposit-card grey lighten-5"
-[horizontal]="true">
+<mz-card class="overview-card deposit-card grey lighten-5" [horizontal]="true">
   <mz-card-title>
     Deposit
   </mz-card-title>
   <mz-card-content>
     <qr-code [value]="qrMainAddress" [size]="300" class="qr-code"></qr-code>
-    <p class="address-string">{{wallet.mainAddress}}</p>
-    <button class="waves-effect waves-light btn" ngxClipboard [cbContent]="wallet.mainAddress">Copy</button>
+    <p class="address-string">{{ qrMainAddress }}</p>
+    <button
+      class="waves-effect waves-light btn"
+      ngxClipboard
+      [cbContent]="qrMainAddress"
+    >
+      Copy
+    </button>
+    <button class="waves-effect waves-light btn" (click)="getNewAddress()">
+      Generate New Address
+    </button>
   </mz-card-content>
 </mz-card>
