--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -6,9 +6,11 @@
   ></app-transactions-view>
   <app-deposit-view class="overview-card-container"></app-deposit-view>
   <app-send-to-view class="overview-card-container"></app-send-to-view>
-  <app-proposals-view class="overview-card-container"></app-proposals-view>
+  <app-proposals-view
+    class="overview-card-container span-six-rows span-two-columns"
+  ></app-proposals-view>
   <cfund-payment-req-list
-    class="overview-card-container"
+    class="overview-card-container span-six-rows span-two-columns"
   ></cfund-payment-req-list>
   <app-generic-rpc-form class="overview-card-container"></app-generic-rpc-form>
 </div>
