--- a/src/app/community-fund/cfund-stats/cfund-stats.component.html
+++ b/src/app/community-fund/cfund-stats/cfund-stats.component.html
@@ -2,10 +2,10 @@
   <mz-card-title>
     Community Fund Statistics
   </mz-card-title>
-  <mz-card-content *ngIf="!communityFundService.communityFundStats">
+  <mz-card-content *ngIf="!communityFundService.communityFundStats.funds">
     Loading...
   </mz-card-content>
-  <mz-card-content *ngIf="communityFundService.communityFundStats">
+  <mz-card-content *ngIf="communityFundService.communityFundStats.funds">
     <p>
       Funds available:
       {{ communityFundService.communityFundStats.funds.available }}
