Removed unnecesary request to get votes. renamed vote method for clarity. Cleaned up data fetching and added error hanlding

--- a/src/app/homepage/homepage-payment-request-list/homepage-payment-request-list.html
+++ b/src/app/homepage/homepage-payment-request-list/homepage-payment-request-list.html
@@ -58,7 +58,7 @@
                 )
               }"
               [disabled]="buttonDebounce"
-              (click)="vote(paymentRequest.hash, 'yes')"
+              (click)="voteForPaymentRequest(paymentRequest.hash, 'yes')"
             >
               Yes
             </button>
@@ -70,7 +70,7 @@
                 )
               }"
               [disabled]="buttonDebounce"
-              (click)="vote(paymentRequest.hash, 'no')"
+              (click)="voteForPaymentRequest(paymentRequest.hash, 'no')"
             >
               No
             </button>
