Cleaned up data fetching. Switched over error handling. renamed vote method for clarity

--- a/src/app/homepage/homepage-proposal-list/homepage-proposal-list.component.html
+++ b/src/app/homepage/homepage-proposal-list/homepage-proposal-list.component.html
@@ -53,7 +53,7 @@
                 selected: communityFundService.proposalVotingYes(proposal.hash)
               }"
               [disabled]="buttonDebounce"
-              (click)="vote(proposal.hash, 'yes')"
+              (click)="voteForProposal(proposal.hash, 'yes')"
             >
               Yes
             </button>
