--- a/src/app/notification-bar/notification-bar.component.html
+++ b/src/app/notification-bar/notification-bar.component.html
@@ -11,8 +11,8 @@
     }"
   >
     <span>
-      {{ notif.getTypeString() }}: {{ notif.description }}
-      <a *ngIf="notif.url" [href]="notif.url">{{ notif.url }}</a>
+      {{ notif.getTypeString() }}: {{ notif.description }} <br />
+      Link: <a *ngIf="notif.url" [href]="notif.url">{{ notif.url }}</a>
     </span>
     <button
       (click)="removeNotification(notif)"
