Link text doesn't show in notif bar unless notif has a url. added debounce to set main address buttons

--- a/src/app/homepage/deposit-view/deposit-view.component.html
+++ b/src/app/homepage/deposit-view/deposit-view.component.html
@@ -3,8 +3,8 @@
     Deposit
   </mz-card-title>
   <mz-card-content>
-    <div *ngIf="!mainAddress">Loading...</div>
-    <div *ngIf="mainAddress">
+    <div *ngIf="!displayAddress">Loading...</div>
+    <div *ngIf="displayAddress">
       <qr-code [value]="qrCodeString" [size]="256" class="qr-code"></qr-code>
 
       <p class="address-string">
