--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,4 +1,5 @@
 <div class="overview-grid">
   <app-ui-password></app-ui-password>
+  <app-set-main-address></app-set-main-address>
   <app-generic-rpc-form></app-generic-rpc-form>
 </div>
