--- a/src/app/community-fund/payment-request-creator/payment-request-creator.component.html
+++ b/src/app/community-fund/payment-request-creator/payment-request-creator.component.html
@@ -20,6 +20,7 @@
       </label>
 
       <button
+        class="waves-effect waves-light btn"
         type="submit"
         [disabled]="!paymentReqForm.valid || buttonDebounce"
       >
