--- a/src/app/settings/ui-password/ui-password.component.html
+++ b/src/app/settings/ui-password/ui-password.component.html
@@ -1,44 +1,73 @@
-<mz-card
-class="overview-card grey lighten-5"
-[horizontal]="true">
+<mz-card class="overview-card grey lighten-5" [horizontal]="true">
   <mz-card-title>
     Change User Login
   </mz-card-title>
   <mz-card-content>
     <form #uiPasswordForm="ngForm">
       <div class="input-field col s12">
-        <input id="username" type="text" class="validate"
-          [(ngModel)]="uiPassword.username" name="username">
+        <input
+          id="username"
+          type="text"
+          class="validate"
+          [(ngModel)]="uiPassword.username"
+          name="username"
+        />
         <label for="username">New Username</label>
       </div>
       <div class="input-field col s12">
-        <input id="password" type="password" class="validate"
-          [(ngModel)]="uiPassword.password" name="password">
+        <input
+          id="password"
+          type="password"
+          class="validate"
+          [(ngModel)]="uiPassword.password"
+          name="password"
+        />
         <label for="password">New Password</label>
       </div>
       <div class="input-field col s12">
-        <button mz-button (click)="bottomSheetModal.openModal()" class="waves-effect waves-light btn right">Update</button>
+        <button
+          mz-button
+          (click)="bottomSheetModal.openModal()"
+          class="waves-effect waves-light btn right"
+          [disabled]="!uiPassword.password || !uiPassword.username"
+        >
+          Update
+        </button>
       </div>
     </form>
   </mz-card-content>
 </mz-card>
 
-<mz-modal #bottomSheetModal [options]="modalOptions">
+<mz-modal #bottomSheetModal>
   <mz-modal-header>
     <h4>Confirm</h4>
   </mz-modal-header>
   <mz-modal-content>
-    <p>You are about to update the username and password used to login to the NavCoin&nbsp;StakeBox interface. If lose this password you will lose access to the wallet so make sure you keep it in a safe place.</p>
+    <p>
+      You are about to update the username and password used to login to the
+      NavCoin&nbsp;StakeBox interface. If lose this password you will lose
+      access to the wallet so make sure you keep it in a safe place.
+    </p>
     <p>Please enter your current username and password to confirm the change</p>
     <form #uiPasswordForm="ngForm">
       <div class="input-field col s12">
-        <input id="username" type="text" class="validate"
-          [(ngModel)]="uiPassword.currentUsername" name="currentUsername">
+        <input
+          id="username"
+          type="text"
+          class="validate"
+          [(ngModel)]="uiPassword.currentUsername"
+          name="currentUsername"
+        />
         <label for="username">Current Username</label>
       </div>
       <div class="input-field col s12">
-        <input id="password" type="password" class="validate"
-          [(ngModel)]="uiPassword.currentPassword" name="currentPassword">
+        <input
+          id="password"
+          type="password"
+          class="validate"
+          [(ngModel)]="uiPassword.currentPassword"
+          name="currentPassword"
+        />
         <label for="password">Current Password</label>
       </div>
     </form>
