--- a/src/app/community-fund/proposal-creator/proposal-creator.component.html
+++ b/src/app/community-fund/proposal-creator/proposal-creator.component.html
@@ -28,7 +28,11 @@
         Fee amount (optional):
         <input type="number" formControlName="optionalFee" />
       </label>
-      <button type="submit" [disabled]="!proposalForm.valid || buttonDebounce">
+      <button
+        class="waves-effect waves-light btn "
+        type="submit"
+        [disabled]="!proposalForm.valid || buttonDebounce"
+      >
         Submit
       </button>
     </form>
